Programming Languages/Hw2/part4/t48.output
running e2c
compiling the C generated code
t48.c: In function ‘main’:
t48.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t48.c:5:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t48.c:6:16: error: ‘bbbb’ undeclared (first use in this function)
 printf("%d\n", bbbb);
                ^
t48.c:6:16: note: each undeclared identifier is reported only once for each function it appears in
t48.c:9:2: error: expected expression before ‘=’ token
  = ;
  ^
t48.c:10:16: error: ‘k’ undeclared (first use in this function)
 printf("%d\n", k + );
                ^
t48.c:10:20: error: expected expression before ‘)’ token
 printf("%d\n", k + );
                    ^
t48.c:11:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t48.c:15:2: error: expected expression before ‘=’ token
  = ;
  ^
t48.c:16:5: error: expected expression before ‘;’ token
 2 = ;
     ^
t48.c:18:2: error: expected expression before ‘=’ token
  = ;
  ^
t48.c:19:8: error: expected expression before ‘;’ token
 0 =  + ;
        ^
t48.c:20:11: error: expected expression before ‘<=’ token
 while( -  <= 0){
           ^
t48.c:21:2: error: expected expression before ‘=’ token
  = ;
  ^
t48.c:22:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t48.c:24:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t48.c:27:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t48.c:29:9: error: expected expression before ‘;’ token
 2 = 2 + ;
         ^
t48.c:31:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t48.c:37:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t48.c:42:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
